:hammer: add html container_welcome

--- a/03  - Intégration/index.html
+++ b/03  - Intégration/index.html
@@ -51,6 +51,28 @@
         <i class="fa-brands fa-instagram fa-2xl"></i>
     </div>
 </div>
+
+<div class="container_welcome">
+    <div class="wrapper_welcome">
+        <div class="content_welcome">
+            <div>
+                <h3>Une salade sur mesure</h3>
+            </div>
+            <div class="text_welcome">
+                <p>MONGOO vous permet de composer votre salade selon vos envies et vos goûts.</p>
+                <p>Une quarantaine d'ingrédients frais et préparés le matin même sur place vous sont proposés au quotidien.</p>
+                <p>Depuis maintenant 10 ans, MONGOO fait le bonheur des gourmets et des gourmands, alors pourquoi pas vous ? </p>
+            </div>
+            <div>
+                <a class="about_button" href="#">En savoir +</a>
+            </div>
+        </div>
+        <div class="img_welcome">
+            <img src="Assets/salade-detoure.png" alt="salade-avocat">
+        </div>
+    </div>
+</div>
+
 <script src="https://kit.fontawesome.com/b5ab5411f1.js" crossorigin="anonymous"></script>
 </body>
 </html>
