--- a/03  - Intégration/index.html
+++ b/03  - Intégration/index.html
@@ -73,6 +73,26 @@
     </div>
 </div>
 
+<div class="container_accroche">
+    <div class="wrapper_accroche">
+        <div class="card_accroche">
+            <h4>Préparé sur place et avec amour</h4>
+            <div class="text_accroche">
+                <p>Chez MONGOO, <span class="underline">tous les ingrédients</span> et <span class="underline">tous les desserts</span> sont préparés sur place.</p>
+                <p>Nous mettons un point d'honneur à ce que tous les matins, nos équipes de super-préparateurs <span class="semibold">découpent,
+                    tranchent, épluchent, assaisonnent, mélangent, émincent, saupoudrent</span> et préparent tout ce qu'il y a sur
+                    le bar afin de vous proposer les meilleures combinaisons de salades possible.
+                </p>
+                <p>Alors faites votre choix !</p>
+
+            </div>
+            <div>
+                <a class="accroche_button"  href="#">En savoir +</a>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="https://kit.fontawesome.com/b5ab5411f1.js" crossorigin="anonymous"></script>
 </body>
 </html>
