:hammer: add html container_menu

--- a/03  - Intégration/index.html
+++ b/03  - Intégration/index.html
@@ -93,6 +93,28 @@
     </div>
 </div>
 
+<div class="container_menu">
+    <div class="wrapper_menu_title">
+        <div class="wrapper_heading">
+            <div class="heading_menu">
+                <div class="title_menu">
+                    <h3>Vous avez dit menu ?</h3>
+                </div>
+                <div class="text_menu">
+                    <div class="text_menu1">
+                        <p>Un menu MONGOO, c'est une salade accompagnée d'une boisson et d'un dessert.
+                            <br>Mais attention, pas n'importe quelle boisson et n'importe quel dessert...
+                        </p>
+                    </div>
+                    <div class="text_menu2">
+                        <p>Découvrez notre large sélection de boissons et desserts pour accompagner votre repas</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="https://kit.fontawesome.com/b5ab5411f1.js" crossorigin="anonymous"></script>
 </body>
 </html>
